src/test/deca/syntax/valid/SO/synt/doubleInitialisation.deca
{
    type x = 12, y = v;
}