src/test/deca/syntax/invalid/SO/synt/bigInt.deca
{
    int i = 10000000000;
}